<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeGo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
     <string-array name="menu_options">
        <item>Home</item>
        <item>Your Trips</item>
        <item>Your Places</item>
        <item>Nearby Places</item>
        <item>Gallery</item>
        <item>Add Trip</item>
        <item>Add Place</item>
         <item>Your Map</item>
         <item>Log Out</item>
    </string-array>
    
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="your_places">Your Places</string>
    <string name="your_trips">Your Trips</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="gallery">Gallery</string>
    <string name="login">Login</string>

    <string name="logout">Log Out</string>

    <string name="add_trip">Add Trip</string>
    <string name="add_place">Add Place</string>


    <string name="edit_notes">Modify Notes</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="sort">Sort</string>

    <string name="invalid_credentials">Invalid Credentials!</string>

    <string name="logging_out">Logging Out</string>

    <string name="logout_alert_title">Log Out</string>
    <string name="logout_alert_message">Are you sure you want to log out?</string>

    <string name="quit_add_place_alert_title">Discard New Place?</string>
    <string name="quit_add_place_alert_message">Are you sure you want to discard this place?</string>
    <string name="quit_edit_place_alert_title">Discard Changes Made?</string>
    <string name="quit_edit_place_alert_message">Are you sure you want to discard your changes?</string>

    <string name="quit_add_trip_alert_title">Discard New Trip?</string>
    <string name="quit_add_trip_alert_message">Are you sure you want to discard this trip?</string>
    <string name="quit_edit_trip_alert_title">Discard Changes Made?</string>
    <string name="quit_edit_trip_alert_message">Are you sure you want to discard your changes?</string>


    <string name="add_this_location">Do you want to use your current location?</string>

    <string name="no_location_detected">Unable to find your location!</string>
    <string name="location_updated_message">Location Updated.</string>

    <string name="companions">Companions</string>
    <string name="add_companion">Add Companion</string>

    <string name="add_note">Add Note</string>

    <string name="title">Title</string>

    <string name="place_added">Place Added</string>
    <string name="trip_added">Trip Added</string>
    <string name="title_activity_place_view">PlaceViewActivity</string>

    <string name="no_companions">No Companions</string>
    <string name="no_notes">No Notes</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="edit">Edit</string>
    <string name="view_map">Map</string>

    <string name="name_error">Please insert in a name!</string>

    <string name="picture_type">Image Type?</string>
    <string name="picture_type_title">Take a picture or select one?</string>
    <string name="picture_type_camera">Take Photo</string>
    <string name="picture_type_storage">Select Photo</string>

    <string name="place_date">You were here on: </string>
    <string name="title_activity_image_tag">ImageTagActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>



</resources>
