<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">


    <EditText
        android:id="@+id/add_trip_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/add_trip_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/add_trip_end_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/add_trip_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes"
        android:id="@+id/textView" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/add_trip_notes"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/white"/>

</LinearLayout>

</LinearLayout>