<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="222dp"
            android:id="@+id/add_place_image"
            android:src="@drawable/noimage"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">
        <EditText
            android:id="@+id/add_place_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/add_trip_date"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_place_location"
                android:hint="@string/location"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_weight="10"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:src="@drawable/ic_action_full_screen"
                android:id="@+id/add_place_locate_button"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/companions"/>

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="124dp"
                android:id="@+id/add_place_companions_listview"
                android:clickable="true"></ListView>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_companion"
                android:id="@+id/add_place_add_companion"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="124dp"
                android:id="@+id/add_place_notes_listview"></ListView>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_note"
                android:id="@+id/add_place_add_notes"/>

        </LinearLayout>


        <Button
            android:id="@+id/add_place_submit"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/purple"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add_place_cancel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/purple"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>
</ScrollView>