<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/add_companion_name"
        android:inputType="text"
        android:imeOptions="actionDone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_companion_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cancel"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add_companion_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>