<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:id="@+id/add_note_title"
        android:inputType="text"
        android:imeOptions="actionDone"/>



    <EditText
        android:id="@+id/add_note_note"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_below="@id/add_note_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/add_note_note">

        <Button
            android:id="@+id/add_companion_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cancel"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add_companion_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>